
rpclib-1.2.0
 * The rpc decorator now produces static methods. The methods still get an initial 
   parameter that holds the service contexts. It's an instance of the MethodContext 
   class, and not the DefinitionBase class.
 * The srpc decorator which doesn't force the methods to have an initial context 
   parameter.
 * The following changes to soaplib were ported to rpclib's SOAP/WSDL parts:
    * duration object is now compatible with Python's native timedelta.
    * WSDL: Support for multiple <service> tags in the wsdl (one for each class in the 
      application)
    * WSDL: Support for multiple <portType> tags and multiple ports.
    * WSDL: Support for enumerating exceptions a method can throw was added.
    * SOAP: Exceptions got some love to be more standards-compliant.
    * SOAP: Xml attribute support

soaplib-3.x -> rpclib-1.1.1-alpha
 * Soaplib is now also protocol agnostic. As it now supports protocols (like 
   Rest-minus-the-verbs HttpRpc) other than soap, it's renamed to Rpclib. This 
   also means soaplib can support multiple soap and wsdl versions.
 * Mention of xml and soap removed from public api where it's not directly
   related to soap or xml. (e.g. a hook rename: on_method_exception_xml ->
   on_method_exception_doc)
 * Protocol serializers now return iterables instead of complete messages. This
   lets return values of arbitrary length possible via the use of generators.

soaplib-2.x
 * This release transformed soaplib from a soap server that exclusively supported
   http to a soap serialization/deserialization library that is architecture and
   transport agnostic.
 * Sphinx docs with working examples: http://arskom.github.com/soaplib/2_0/
 * Serializers renamed to Models 
 * Standalone xsd generation for ClassSerializer objects has been added. This 
   allows soaplib to be used to define generic XML schemas, without SOAP 
   artifacts.
 * Annotation Tags for primitive Models has been added.